Created regions. FilterDigit method was placed in separate class. Changed the implementation of InsertNumber method

--- a/Logic.NUnitTests/Logic.NUnitTests.csproj
+++ b/Logic.NUnitTests/Logic.NUnitTests.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FilterListsMethodsTests.cs" />
     <Compile Include="NumericMethodsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
